<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/oscar_predictions_posters"
        android:backgroundTint="#978F8F"
        android:backgroundTintMode="multiply"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="134dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_Movies"
                android:layout_width="180dp"
                android:layout_height="176dp"
                android:layout_marginLeft="3dp"
                android:text="@string/add_movies_to_db"
                android:textColor="#FDFDFD"
                android:textStyle="bold"
                app:backgroundTint="#2e3040"
                app:cornerRadius="20dp"
                app:strokeColor="#CAE7F4"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/search_Movies"
                android:layout_width="180dp"
                android:layout_height="176dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:text="@string/search_for_movies"
                android:textStyle="bold"
                app:backgroundTint="#2e3040"
                app:cornerRadius="20dp"
                app:strokeColor="#CAE7F4"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_Actors"
                android:layout_width="180dp"
                android:layout_height="176dp"
                android:layout_marginLeft="3dp"
                android:text="@string/search_for_actors"
                android:textStyle="bold"
                app:backgroundTint="#2e3040"
                app:cornerRadius="20dp"
                app:strokeColor="#CAE7F4"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/retrieve_from_web_service"
                android:layout_width="180dp"
                android:layout_height="176dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:text="@string/retrieve_movies_from_web"
                android:textStyle="bold"
                app:backgroundTint="#2e3040"
                app:cornerRadius="20dp"
                app:strokeColor="#CAE7F4"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_for_web_search"
            android:layout_width="350dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv"
            android:textAlignment="center" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>