<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchForMovies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/best_posters_of_the_decade"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:backgroundTint="#978F8F"
        android:backgroundTintMode="multiply"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="116dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:hint="@string/type_movie_name_here" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/retrieve_btn"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/retrieve_movie"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                app:backgroundTint="#030B35"
                app:cornerRadius="10dp"
                app:strokeColor="#9BCFF8"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/save_movie_to_DB"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/save_movie_to_db"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                app:backgroundTint="#030B35"
                app:cornerRadius="10dp"
                app:strokeColor="#9BCFF8"
                app:strokeWidth="2dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/display_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:gravity="start|top"
            android:inputType="textLongMessage|textMultiLine"
            android:paddingLeft="20dp"
            android:text="@string/display_movie_details"
            android:textColor="#030A30" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>