<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#0E0E0E"
    android:backgroundTintMode="screen"
    tools:context=".SearchForActors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image1"
        android:backgroundTint="#978F8F"
        android:backgroundTintMode="multiply"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="117dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/type_actors_name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/type_actor_s_name_here"
                android:paddingLeft="10dp"
                android:textColorHint="#7C7A7A" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/search"
                app:backgroundTint="#05104E"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/display_result"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/display_actors_movies"
            android:textColor="#B8B3B3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>